--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+#TEST
 set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
