--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 setw -g mode-keys vi
 set -g default-terminal "screen-256color"
+#test
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
